feat: checkpoint before i destroy everything
